--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,1 +1,14 @@
-<header>Header goes here</header>
+<header>
+    <nav>
+        <p>Logo here</p>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/new">New</a>
+            </li>
+        </ul>
+    </nav>
+
+</header>
