--- a/src/main/resources/templates/games/all.html
+++ b/src/main/resources/templates/games/all.html
@@ -3,10 +3,7 @@
 <head th:replace="fragments/head"></head>
 <body>
     <header th:replace="fragments/header"></header>
-    <section>
-        <h1 th:text="${title}"></h1>
-        <p th:text="${games}"></p>
-    </section>
+    <section th:replace="games/inventory"></section>
     <footer th:replace="fragments/footer"></footer>
 </body>
 </html>
