--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head"></head>
 <body>
     <header th:replace="fragments/header"></header>
-    <section>Section goes here</section>
+    <section th:replace="games/inventory"></section>
     <footer th:replace="fragments/footer"></footer>
 </body>
 </html>
