Add done, edit in progress, delete pending. Current problem with edit form

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
                 <a href="/">Home</a>
             </li>
             <li>
-                <a href="/new">New</a>
+                <a href="/games/new">New</a>
             </li>
         </ul>
     </nav>
