--- a/src/main/resources/templates/games/inventory.html
+++ b/src/main/resources/templates/games/inventory.html
@@ -5,5 +5,6 @@
         <p th:text="${game.title}"></p>
         <p th:text="${game.price}"></p>
         <p th:text="${game.category}"></p>
+        <button><a th:href="'/new/edit/'+${game.id}">Edit</a></button>
     </div>
 </section>
