--- a/src/main/resources/templates/games/new.html
+++ b/src/main/resources/templates/games/new.html
@@ -5,7 +5,7 @@
 <header th:replace="fragments/header"></header>
 <section class="container">
     <h1 th:text="${title}"></h1>
-    <form th:action="@{/new}" th:object="${game}" method="post">
+    <form th:action="@{/games/new}" th:object="${game}" method="post">
         <div class="form-group">
             <input type="hidden" th:field="*{id}">
             <label>Title</label>
