--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,4 +1,5 @@
-<head>
+<head xmlns:th="http://www.w3.org/1999/xhtml">
     <meta charset="UTF-8">
     <title>Legacy Games Store</title>
+    <link rel="stylesheet" th:href="@{/styles/style.css}">
 </head>
