--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
-<header>
-    <nav>
-        <p>Logo here</p>
+<header xmlns:th="http://www.w3.org/1999/xhtml">
+    <nav class="nav">
+        <img class="logo" th:src="@{/img/legacy-games-logo.png}">
         <ul>
             <li>
                 <a href="/">Home</a>
