--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -15,7 +15,12 @@
         <div>
             <label for="price">Price</label>
             <input th:field="*{price}" type="text" id="price"
-                   placeholder="Enter author">
+                   placeholder="Enter price">
+        </div>
+        <div>
+            <label for="year">Year</label>
+            <input th:field="*{year}" type="text" id="year"
+                   placeholder="Enter year">
         </div>
         <div class="form-group">
             <label class="col-md2" for="category">Category</label>
