--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -5,7 +5,7 @@
 <header th:replace="fragments/header"></header>
 <section class="container">
     <h1 th:text="${title}"></h1>
-    <form th:action="@{/games/new}" th:object="${game}" method="post">
+    <form th:action="@{/games/new}" th:object="${game}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <input type="hidden" th:field="*{id}">
             <label>Title</label>
@@ -22,10 +22,14 @@
             <input th:field="*{year}" type="text" id="year"
                    placeholder="Enter year">
         </div>
-        <div class="form-group">
-            <label class="col-md2" for="category">Category</label>
+        <div>
+            <label for="category">Category</label>
             <input th:field="*{category}" type="text" id="category"
                    placeholder="Enter category">
+        </div>
+        <div>
+            <label for="photos">Photos</label>
+            <input th:field="*{photos}" type="file" name="image" accept="image/png, image/jpeg">
         </div>
         <div>
             <input type="submit" value="Save"/>
