--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -29,7 +29,7 @@
         </div>
         <div>
             <label for="photos">Photos</label>
-            <input th:field="*{photos}" type="file" name="image" accept="image/png, image/jpeg">
+            <input type="file" name="image" accept="image/png, image/jpeg" id="photos">
         </div>
         <div>
             <input type="submit" value="Save"/>
