Renamed photos field to photo

--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -28,8 +28,8 @@
                    placeholder="Enter category">
         </div>
         <div>
-            <label for="photos">Photos</label>
-            <input type="file" name="image" accept="image/png, image/jpeg" id="photos">
+            <label for="photo">Photo</label>
+            <input type="file" name="image" accept="image/png, image/jpeg" id="photo">
         </div>
         <div>
             <input type="submit" value="Save"/>
