--- a/src/main/resources/templates/games/inventory.html
+++ b/src/main/resources/templates/games/inventory.html
@@ -1,7 +1,7 @@
 <section xmlns:th="http://www.thymeleaf.org">
     <h1 th:text="${title}"></h1>
     <div class="card" th:each="game: ${games}">
-        <img th:src="@{${game.photosImagePath}}" />
+        <img th:src="@{${game.photoImagePath}}" />
         <p th:text="${game.title}"></p>
         <p th:text="${game.price}"></p>
         <p th:text="${game.year}"></p>
