--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -23,9 +23,13 @@
                    placeholder="Enter year">
         </div>
         <div>
-            <label for="category">Category</label>
-            <input th:field="*{category}" type="text" id="category"
-                   placeholder="Enter category">
+            <label for="category_id">Category</label>
+            <select th:field="*{category}" id="category_id">
+                <option th:each="category: ${categories}"
+                    th:text="${category.name}"
+                    th:value="${category.id}">
+                </option>
+            </select>
         </div>
         <div>
             <label for="photo">Photo</label>
