--- a/src/main/resources/templates/games/inventory.html
+++ b/src/main/resources/templates/games/inventory.html
@@ -1,13 +1,26 @@
 <section xmlns:th="http://www.thymeleaf.org">
     <h1 th:text="${title}"></h1>
+
+    <ul class="book-filters">
+        <li><a href="/home">All</a></li>
+
+        <li th:each="category: ${categories}"><a th:href="${'/home?categoryId='+category.id}" th:text="${category.name}"></a></li>
+
+    </ul>
+
+    <br/>
+
     <div class="card" th:each="game: ${games}">
         <img th:src="@{${game.photoImagePath}}" />
         <p th:text="${game.title}"></p>
         <p th:text="${game.price}"></p>
         <p th:text="${game.year}"></p>
-        <p th:text="${game.category}"></p>
+        <p th:text="${game.category.name}"></p>
 
         <button><a th:href="'/games/edit/'+${game.id}">Edit</a></button>
         <button><a th:href="'/games/delete/'+${game.id}">Delete</a></button>
     </div>
+
 </section>
+
+
