--- a/src/main/resources/templates/games/inventory.html
+++ b/src/main/resources/templates/games/inventory.html
@@ -1,4 +1,4 @@
-<section xmlns:th="http://www.thymeleaf.org">
+<section xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <h1 th:text="${title}"></h1>
 
     <ul class="book-filters">
@@ -17,8 +17,8 @@
         <p th:text="${game.year}"></p>
         <p th:text="${game.category.name}"></p>
 
-        <button><a th:href="'/games/edit/'+${game.id}">Edit</a></button>
-        <button><a th:href="'/games/delete/'+${game.id}">Delete</a></button>
+        <button sec:authorize="isAuthenticated()"><a th:href="'/games/edit/'+${game.id}">Edit</a></button>
+        <button sec:authorize="isAuthenticated()"><a th:href="'/games/delete/'+${game.id}">Delete</a></button>
     </div>
 
 </section>
