First style layout done

--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -33,7 +33,7 @@
         </div>
         <div>
             <label for="photo">Photo</label>
-            <input type="file" name="image" accept="image/png, image/jpeg" id="photo">
+            <input type="file" name="image" accept="image/png, image/jpeg, image/jpg" id="photo">
         </div>
         <div>
             <input type="submit" value="Save"/>
