--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -1,22 +1,100 @@
 * {
-    margin: 0 auto;
+    margin: 0;
 }
 
-.nav {
-    background: rgb(252,55,39);
-    background: linear-gradient(0deg, rgba(252,55,39,1) 0%, rgba(255,170,5,1) 100%);
-    height: 150px;
-    display: flex;
+body {
+    background-color: black;
+}
+
+/* NAVBAR */
+nav {
+    background: rgb(252, 55, 39);
+    background: linear-gradient(0deg, rgba(252, 55, 39, 1) 0%, rgba(255, 170, 5, 1) 100%);
+    height: 130px;
 }
 
 .logo {
-    height: 150px;
+    height: 130px;
 }
 
+.navbar-links {
+    justify-content: flex-start;
+    margin: 0 20px;
+    width: 75%;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+nav li {
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0 20px;
+}
+
+nav a {
+    color: black;
+    font-size: 22px;
+}
+
+nav a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar-form {
+    align-items: flex-end;
+}
+
+/* CATEGORIES */
 .book-filters {
     display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 20px auto;
 }
 
 .book-filters li {
-    margin: 0 20px;
+    padding: 15px 20px;
+    text-decoration: none;
+    list-style-type: none;
+    background-color: rgba(252, 55, 39, 1);
+    border-radius: 25px;
+}
+
+.book-filters a {
+    color: white;
+    font-size: 18px;
+}
+
+.book-filters a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+/* CARDS */
+.card-section{
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    justify-content: space-evenly;
+}
+
+.game-img-container {
+    height: auto;
+}
+
+/* FOOTER */
+footer {
+    color: white;
+    height: 50px;
+    background: rgb(252, 55, 39);
+    background: linear-gradient(0deg, rgba(252, 55, 39, 1) 0%, rgba(255, 170, 5, 1) 100%);
+}
+
+footer p {
+    margin: 10px 20px;
 }
