--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,20 +1,27 @@
 <header xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-    <nav class="nav">
+    <nav class="navbar navbar-expand-lg">
         <img class="logo" th:src="@{/img/legacy-games-logo.png}">
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a href="/games/new">New</a>
-            </li>
-            <li sec:authorize="isAuthenticated()">
-                <a href="/logout">Log out</a>
-            </li>
-            <li sec:authorize="isAnonymous()">
-                <a href="/login">Log in</a>
-            </li>
-        </ul>
+        <div class="navbar-links">
+            <ul>
+                <li>
+                    <b><a href="/">Home</a></b>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/games/new">New</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/logout">Log out</a>
+                </li>
+                <li sec:authorize="isAnonymous()">
+                    <a href="/login">Log in</a>
+                </li>
+            </ul>
+        </div>
+
+        <form class="form-inline my-2 my-lg-0 navbar-form">
+            <input class="form-control mr-sm-2" type="search" placeholder="Browse our collection" aria-label="Search">
+            <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
+        </form>
     </nav>
 
 </header>
