Initiated search function, review pending

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,8 +18,9 @@
             </ul>
         </div>
 
-        <form class="form-inline my-2 my-lg-0 navbar-form">
-            <input class="form-control mr-sm-2" type="search" placeholder="Browse our collection" aria-label="Search">
+        <form class="d-flex" action="/games/search" method="get">
+            <input name="word" class="form-control mr-sm-2" type="search" placeholder="Browse our collection"
+                   aria-label="Search">
             <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
